--- a/index.css
+++ b/index.css
@@ -63,7 +63,7 @@ p{
 
 #dashboard_img
 {
-    background-image: url('backgroundDashBoard.png');
+    background-image: url('backgroundDashboard.png');
     background-repeat:no-repeat;
     height: 100%;
     background-position: center;
